[package]
name = "trunk"
version = "0.1.0"
edition = "2018"
description = "Yew WebUI for TLM"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.18", features = ["web_sys"] }
wasm-bindgen = "^0.2.78"
failure = "0.1.8"
