[package]
name = "tlm_webui"
version = "0.1.0"
edition = "2018"
description = "Yew WebUI for TLM"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.18"
console_error_panic_hook = "0.1.7"
anyhow = "1.0.52"
serde = "1.0.133"
serde_derive = "1.0.133"
serde_json = "1.0.74"